procps-ng-NEXT
  * library
    Re-add elogind support                                 merge #151
  * ps: threads again display when -L is used with -q      issue #234
  * ps: proper aix format string behavior was restored
  * sysctl: print dotted keys again
  * top: fix 'smaps' bug preventing build under clang      issue #235

procps-ng-4.0.0
---------------
  * Rename pwait to pidwait
  * free: Add committed line option                        merge #25
  * free: Fix -h --si combined options                     issue #133, #223
  * free: Fix first column justification                   issue #229, #204, #206, Debian #1001689
  * free: Better spacing for Chinese language              issue #213
  * library: renamed to libproc-2 and reset to 0:0:0
  * library: add support for accessing smaps_rollup        issue #112, #201
  * library: add support for accessing autogroups
  * library: add support for LIBPROC_HIDE_KERNEL env var   merge #147
  * library: add support for cpu utilization to pids i/f
  * pkill: Check for lt- variants of program name          issue #192
  * pgrep: Add newline after regex error message           merge #91
  * pgrep: Fix selection where uid/gid > 2^31              merge !146
  * pgrep: Select on cgroup v2 paths                       issue #168
  * ps: Add OOM and OOMADJ fields                          issue #198
  * ps: Add IO Accounting fields                           issue #184
  * ps: Add PSS and USS fields                             issue #112
  * ps: Add two new autogroup fields
  * ps: Ignore SIGURG                                      merge !142
  * slabtop: Don't combine d and o options                 issue #160
  * sysctl: Add support for systemd glob patterns          issue #191
  * sysctl: Check resolved path to be under /proc/sys      issue #179
  * sysctl: return non-zero if EINVAL return for write     merge #76
  * sysctl.conf.5: Note max line length                    issue #77
  * top: added LOGID similar to 3.3.13 ps LUID