@@ -5,6 +5,7 @@ procps-ng-NEXT
   * ps: proper aix format string behavior was restored
   * sysctl: print dotted keys again
   * top: fix 'smaps' bug preventing build under clang      issue #235
+  * top: column highlighting allowed under 'L' or 'O'
 
 procps-ng-4.0.0
 ---------------
